include_directories(${OpenRobot_ROOT_DIR})

FILE(GLOB SOURCE_POINTDATA *.cpp *.h)

add_library(OR_ReadWrite SHARED ${SOURCE_POINTDATA})

INSTALL(TARGETS OR_ReadWrite
  RUNTIME DESTINATION ${INSTALL_DIR}/bin
  LIBRARY DESTINATION ${INSTALL_DIR}/lib
  ARCHIVE DESTINATION ${INSTALL_DIR}/lib
)

FILE(GLOB POINTDATA_HEADERS *.h)

INSTALL(FILES ${POINTDATA_HEADERS}
  DESTINATION ${INSTALL_DIR}/include/OpenRobot/Base/ReadWrite
)